--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,29 @@
 {
-  "compilerOptions": {
-    "jsx": "react",
-    "target": "es2017",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "dist",
-    "strict": true,
-    "composite": true,
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "declaration": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "sourceMap": true
-  }
+	"compilerOptions": {
+		"jsx": "react",
+		"target": "es2017",
+		"module": "commonjs",
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"outDir": "dist",
+		"strict": true,
+		"composite": true,
+		"allowJs": true,
+		"resolveJsonModule": true,
+		"moduleResolution": "node",
+		"noImplicitThis": true,
+		"alwaysStrict": true,
+		"declaration": true,
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
+		"sourceMap": true,
+		"baseUrl": ".",
+		"paths": {
+			"*": ["node_modules/*"],
+			"@account-abstraction/bundler/*": ["packages/bundler/src/*"],
+			"@account-abstraction/sdk/*": ["packages/sdk/src/*"],
+			"@account-abstraction/utils/*": ["packages/utils/src/*"],
+			"@account-abstraction/validation-manager/*": ["packages/validation-manager/src/*"]
+		}
+	}
 }
