--- a/packages/bundler/localconfig/bundler.config.json
+++ b/packages/bundler/localconfig/bundler.config.json
@@ -1,6 +1,6 @@
 {
 	"gasFactor": "1",
-	"port": "3000",
+	"port": 3000,
 	"network": "https://boldest-blissful-vineyard.bsc-testnet.quiknode.pro/",
 	"entryPoint": "0x0000000071727De22E5E9d8BAf0edAc6f37da032",
 	"beneficiary": "0x37fB58AC50f491aE39d7c2415786aB96c0D8dA10",
